# BeautyMap

./: .gitignore  README.md  main.py  main_rushversion.py  main_rushversion_leica.py  main_rushversion_lidar.py  pcd2bin.py  requirments.txt  save_view_point.py  view_distribution.py
assets/: BACKUP.md
data/: KTH_poses_sensor.csv  README.md  TPB.json  TPB_poses_lidar2body.csv  lecai_viewpoint.json  test.pcd  viewpoint.json
data/o3d_view/: TPB.json  default_test.json  kitti_view.json  lecai_viewpoint.json
kernel_cupy/: kernel.py
lib/: bee_tree.py
scripts/: CMakeLists.txt  README.md  benchmark_results.csv  benchmark_results_HA.csv  eval.py  export_eval_pcd.cpp  view_res.py
scripts/carla_semantic_collect/: README.md  collect_data.py  parseAvis.py
scripts/view/: camera_position_close.txt  save_camera_pos.py  view_res.ipynb
test/: README.md  save_view_point.py  semantickitti_label.py  signle_semantic_view.py  test_2d_ray.py  test_3d_binary.py  test_3d_voxel.py  test_bee_tree.py  test_leica_normal.py  test_logic.py  view_semanticAuto.py  view_semanticBInteractive.py  view_semantic_all_frames.py
test/semantic_label/: semantic-carla.yaml  semantic-label.yaml
utils/: 2d_raycasting.py  __init__.py  bee_tree.py  esdf_cal.py  global_def.py  o3d_view.py  pcdpy3.py  pts_read.py
